fund server wallets

--- a/baevii-back-end/appsettings.json
+++ b/baevii-back-end/appsettings.json
@@ -1,7 +1,8 @@
 {
   "Privy": {
     "AppId": "user-secret",
-    "Secret": "user-secret"
+    "Secret": "user-secret",
+    "FundingPrivateKey": "user-secret"
   },
   "Mssql": {
     "ConnStr": "user-secret"
