--- a/baevii-back-end/appsettings.json
+++ b/baevii-back-end/appsettings.json
@@ -14,7 +14,10 @@
       "Serilog.Sinks.AzureBlobStorage"
     ],
     "MinimumLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning"
+      }
     },
     "WriteTo": [
       {
